--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,18 @@
 {% load static %}
 
+<style>
+    div.cinema {
+        float: left;
+        width: 10%;
+        height: 50px;
+        background-size: 40%;
+        background-position: center;
+        background-repeat: no-repeat;
+
+        position: relative;
+}
+</style>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,16 +30,10 @@
     <div class="header-wrapper">
         <header>
             <div class="menu">
-                <div class="search">
-                    <div class="lcol">
-                        <div class="main-search">
-                            <form action="/search/" method="get">
-                                <input type="text" name="query" class="search-field" placeholder="Поиск...">
-                                <button type="button" class="search-button">Поиск<i class="fa fa-search"></i></button>
-                            </form>
-                        </div>
-                    </div>
+                <div class="cinema" style="background-image: url('../static/images/cinema-512.png');">
+                    <a href="/"></a>
                 </div>
+
                 <nav>
                     <ul class="main-menu">
 
@@ -41,8 +48,35 @@
                         <li class="">
                             <a class="main-link" href="/news/">О сайте</a>
                         </li>
+
+
+                    {% if request.user.is_authenticated %}
+                        <li {% if section == "dashboard" %}class="selected"{% endif %}>
+                            <a class="main-link" href="{% url "dashboard" %}">My dashboard</a>
+                        </li>
+                        <li {% if section == "images" %}class="selected"{% endif %}>
+                            <a class="main-link" href="#">Images</a>
+                        </li>
+                        <li {% if section == "people" %}class="selected"{% endif %}>
+                            <a class="main-link" href="#">People</a>
+                        </li>
+                    {% endif %}
+
                     </ul>
                 </nav>
+
+
+
+
+            <span class="user">
+                {% if request.user.is_authenticated %}
+                    Hello {{ request.user.first_name }},
+                    <a class="main-link" href="{% url "logout" %}">Logout</a>
+                {% else %}
+                    <a class="main-link" href="{% url "login" %}">Log-in</a>
+                {% endif %}
+            </span>
+
             </div>
         </header>
     </div>
