Добавлена форма смены пароля

--- a/movie/templates/movie/movie_list.html
+++ b/movie/templates/movie/movie_list.html
@@ -15,7 +15,7 @@
                 <table class="search_form">
                     {{ form.as_table }}
                 </table>
-                <button type="submit">Кнопка</button>
+                <button type="submit">Поиск</button>
             </form>
         </div>
     {% endif %}
@@ -36,6 +36,13 @@
             {% endfor %}
         </table>
     </div>
+
+    <div>
+        <img src="http://postervdom.ru/upload/shop_3/2/3/2/item_2326/item_2326.jpg" alt=""
+             style="float: top; height: 300px">
+    </div>
+
+
 
 
 
