--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,6 +7,14 @@ body{
 	margin: 0px;
 }
 
+
+.logo{
+	color: white;
+	font-size: 32px;
+	text-decoration: none;
+}
+
+
 .content-wrapper{
 	margin: 8px;
 }
