--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -3,6 +3,6 @@
 {% block title %}Dashboard{% endblock %}
 
 {% block body %}
-    <h1>Dashboard</h1>
-    <p>Welcome to your dashboard.</p>
+    <h1>Моя страница</h1>
+    <p>Добро пожаловать на вашу страницу.</p>
 {% endblock %}
