--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 
-{% block title %}Log-in{% endblock %}
+{% block title %}Авторизация{% endblock %}
 
 {% block body %}
-    <h1>Log-in</h1>
-    <p>Please, use the following form to log-in:</p>
+    <h1>Авторизация</h1>
+    <p>Пожалуйста, введите данные в поля ниже:</p>
     <form action="." method="post">
         {{ form.as_p }}
         {% csrf_token %}
         <p><input type="submit" value="Log in"></p>
     </form>
+
+    <p><a href="{% url "password_reset" %}">Забыли пароль?</a></p>
 {% endblock %}
