--- a/account/templates/registration/logged_out.html
+++ b/account/templates/registration/logged_out.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}Logged out{% endblock %}
+{% block title %}Выход{% endblock %}
 
 {% block body %}
-    <h1>Logged out</h1>
-    <p>You have been successfully logged out. You can <a href="{% url "login" %}">log-in again</a>.</p>
+    <h1>Выход</h1>
+    <p>Вы успешно деавторизованы. Вы можете <a href="{% url "login" %}">авторизоваться снова</a>.</p>
 {% endblock %}
