--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -1,16 +1,15 @@
 {% extends "base.html" %}
 
-{% block title %}Log-in{% endblock %}
+{% block title %}Авторизация{% endblock %}
 
 {% block body %}
-    <h1>Log-in</h1>
+    <h1>Авторизация</h1>
     {% if form.errors %}
         <p>
-            Your username and password didn't match.
-            Please try again.
+            Пользователя с таким именем не найдено.
         </p>
     {% else %}
-        <p>Please, use the following form to log-in:</p>
+        <p>Пожалуйста, заполнител поля:</p>
     {% endif %}
     <div class="login-form">
         <form action="{% url "login" %}" method="post">
@@ -19,5 +18,7 @@
             <input type="hidden" name="next" value="{{ next }}" />
             <p><input type="submit" value="Log-in"></p>
         </form>
+
+        <p><a href="{% url "password_reset" %}">Забыли пароль?</a></p>
     </div>
 {% endblock %}
