Добавлена форма регистрации

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -4,7 +4,8 @@
 
 {% block body %}
     <h1>Авторизация</h1>
-    <p>Пожалуйста, введите данные в поля ниже:</p>
+    <p>Пожалуйста, введите данные в поля ниже. Если у вас нет акканута,  вы можете <a href="{% url "register" %}"
+                                                                                        >зарегистрироваться</a></p>
     <form action="." method="post">
         {{ form.as_p }}
         {% csrf_token %}
