Добавлена страница добавления места

--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}Моя страница{% endblock %}
 
 {% block body %}
     <h1>Моя страница</h1>
