--- a/cinema/templates/cinema/add_place.html
+++ b/cinema/templates/cinema/add_place.html
@@ -1,9 +1,6 @@
 {% extends 'base.html' %}
 
-
-{% block title %}
-    Добавление места просмотра
-{% endblock %}
+{% block title %}Добавление места просмотра{% endblock %}
 
 {% block body %}
     <h1>Добавление места просмотра</h1>
@@ -20,12 +17,9 @@
         </div>
     {% endif %}
 
-
-
     <div>
         <img src="http://www1.pictures.zimbio.com/gi/Safe+European+Premiere+Inside+Arrivals+DgoQtTF5XFux.jpg" alt=""
              style="float: top; height: 400px">
     </div>
-    
 {% endblock %}
 
