--- a/movie/templates/movie/movie_list.html
+++ b/movie/templates/movie/movie_list.html
@@ -1,9 +1,6 @@
 {% extends 'base.html' %}
 
-
-{% block title %}
-    Поиск сеанса
-{% endblock %}
+{% block title %}Поиск сеанса{% endblock %}
 
 {% block body %}
     <h1>Поиск сеанса</h1>
