--- a/templates/base.html
+++ b/templates/base.html
@@ -1,91 +1,74 @@
 {% load static %}
 
 <style>
-    div.cinema {
-        float: left;
-        width: 10%;
-        height: 50px;
-        background-size: 40%;
-        background-position: center;
-        background-repeat: no-repeat;
-        position: relative;
-}
+{#Если удалить эти теги, то футер поедет#}
 </style>
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <title>
-        {% block title %}
-            THIS IS EPIC SHIT
-        {% endblock%}
-    </title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+        <title>
+            {% block title %}
+                THIS IS EPIC SHIT
+            {% endblock%}
+        </title>
+    </head>
 
-<body>
+    <body>
+        <div class="header-wrapper">
+            <header>
+                <div class="menu">
+                    <div id="logo">
+                        <a class="logo" href="/">FilmSeats</a>
+                    </div>
 
-    <div class="header-wrapper">
-        <header>
-            <div class="menu">
-                <div id="logo">
-                    <a class="logo" href="/">FilmSeats</a>
+                    <nav>
+                        <ul class="main-menu">
+
+                            <li class="">
+                                <a class="main-link" href="{% url 'movie_list' %}">Сеансы</a>
+                            </li>
+
+                            <li class="">
+                                <a class="main-link" href="{% url 'index_cinema_url' %}">Кинотеатры</a>
+                            </li>
+
+                            <li class="">
+                                <a class="main-link" href="{% url 'about' %}">О сайте</a>
+                            </li>
+
+                        {% if request.user.is_authenticated %}
+                            <li {% if section == "dashboard" %}class="selected"{% endif %}>
+                                <a class="main-link" href="{% url "dashboard" %}">Mоя страница</a>
+                            </li>
+                        {% endif %}
+                        </ul>
+                    </nav>
+
+                    <span class="user">
+                        {% if request.user.is_authenticated %}
+                            Hello {{ request.user.first_name }},
+                            <a class="main-link" href="{% url "logout" %}">Выход</a>
+                        {% else %}
+                            <a class="main-link" href="{% url "login" %}">Авторизация</a>
+                        {% endif %}
+                    </span>
                 </div>
-
-                <nav>
-                    <ul class="main-menu">
-
-                        <li class="">
-                            <a class="main-link" href="{% url 'movie_list' %}">Сеансы</a>
-                        </li>
-
-                        <li class="">
-                            <a class="main-link" href="{% url 'index_cinema_url' %}">Кинотеатры</a>
-                        </li>
-
-                        <li class="">
-                            <a class="main-link" href="{% url 'about' %}">О сайте</a>
-                        </li>
-
-                    {% if request.user.is_authenticated %}
-                        <li {% if section == "dashboard" %}class="selected"{% endif %}>
-                            <a class="main-link" href="{% url "dashboard" %}">My dashboard</a>
-                        </li>
-                        <li {% if section == "images" %}class="selected"{% endif %}>
-                            <a class="main-link" href="#">Images</a>
-                        </li>
-                        <li {% if section == "people" %}class="selected"{% endif %}>
-                            <a class="main-link" href="#">People</a>
-                        </li>
-                    {% endif %}
-                    </ul>
-                </nav>
-
-                <span class="user">
-                    {% if request.user.is_authenticated %}
-                        Hello {{ request.user.first_name }},
-                        <a class="main-link" href="{% url "logout" %}">Выход</a>
-                    {% else %}
-                        <a class="main-link" href="{% url "login" %}">Авторизация</a>
-                    {% endif %}
-                </span>
-            </div>
-        </header>
-    </div>
-
-    <div class="content-wrapper">
-        {% block body %}
-            <h2>111111111111</h2>
-        {% endblock %}
-    </div>
-
-    <div class="footer-wrapper">
-        <div class="rfooter">
-            <span>© 2019 Nikolaev Pavel</span>
+            </header>
         </div>
-    </div>
 
-</body>
+        <div class="content-wrapper">
+            {% block body %}
+                <h2>111111111111</h2>
+            {% endblock %}
+        </div>
 
+        <div class="footer-wrapper">
+            <div class="rfooter">
+                <span>© 2019 Nikolaev Pavel</span>
+            </div>
+        </div>
+    </body>
 </html>
