Переделана форма добавления места через модель, учитывается пользователь

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -144,3 +144,11 @@ div.rfooter span:last-child {
 	float: right;
 	margin: 10px 160px 0 20px;
 }
+
+.user{
+	color: lemonchiffon;
+}
+
+li.selected{
+	color: red;
+}
