--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
 
                     <span class="user">
                         {% if request.user.is_authenticated %}
-                            Hello {{ request.user.first_name }},
+                            Добро пожаловать, {{ request.user.first_name }}
                             <a class="main-link" href="{% url "logout" %}">Выход</a>
                         {% else %}
                             <a class="main-link" href="{% url "login" %}">Авторизация</a>
